[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv= {version =  "0.13.0" ,features = ["s-mode","riscv-macros"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.8.0"

[profile.release]
debug = true